Tue Nov 23 23:23:45 CET 2004 (tk)
---------------------------------
  * clamscan: --move: preserve original access and modification times
	      (requested by Tomasz Papszun); optimise

Tue Nov 23 09:06:45 GMT 2004 (njh)
----------------------------------
  * libclamav/binhex.c:	Fix crash in base64 encoded binhex files reported by
				Stefan Kaltenbrunner <stefan*kaltenbrunner.cc>

Mon Nov 22 15:20:07 GMT 2004 (njh)
----------------------------------
  * libclamav:	General performance enhancements

Sat Nov 20 23:04:59 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Better parsing of clamd's reply

Sat Nov 20 13:18:58 GMT 2004 (njh)
----------------------------------
  * libclamav/untar.c:	Better handling of false file type identification

Fri Nov 19 11:34:56 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Scan email footers (portions after the last MIME
				boundary)

Thu Nov 18 20:28:13 CET 2004 (tk)
---------------------------------
  * libclamav: add support for Mac's HQX file format (patch by Nigel)

Thu Nov 18 11:03:14 CET 2004 (tk)
---------------------------------
  * libclamav: try to detect (and mark as Suspected.Zip) zip archives with
	       modified information in local header

Thu Nov 18 00:05:37 CET 2004 (tk)
---------------------------------
  * libclamav/pe.c: recognize more subsystem/machine types

Wed Nov 17 17:35:26 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Scan some more bounce messages

Tue Nov 16 18:24:06 CET 2004 (tk)
---------------------------------
  * libclamav/filetypes.c: add new mail detection rule

Tue Nov 16 18:07:39 CET 2004 (tk)
---------------------------------
  * libclamav: improve generating of temporary file names (as requested by
	       Boguslaw Brandys and Nigel)

Tue Nov 16 16:58:12 CET 2004 (tk)
---------------------------------
  * freshclam/manager.c: get_database: terminate buffer after recv() call
			 (thanks to Nigel)
