@@ -90,9 +90,19 @@ FixStaleSocket
 # Default: 15
 #MaxConnectionQueueLength 30
 
-# Close the connection if this limit is exceeded.
+# Clamd uses FTP-like protocol to receive data from remote clients.
+# If you are using clamav-milter to balance load between remote clamd daemons
+# on firewall servers you may need to tune the options below.
+
+# Close the connection when the data size limit is exceeded.
 # Default: 10M
 #StreamMaxLength 20M
+
+# Limit port range.
+# Default: 1024
+#StreamMinPort 30000
+# Default: 65535
+#StreamMaxPort 32000
 
 # Maximal number of threads running at the same time.
 # Default: 10
