@@ -1,3 +1,9 @@
+Thu Nov 25 18:38:06 CET 2004 (tk)
+---------------------------------
+  * clamd: new directives StreamMinPort and StreamMaxPort (allow port range
+	   specification for stream mode). Patch by Alexander Marx
+	   <mad-ml*madness.at>)
+
 Tue Nov 23 23:23:45 CET 2004 (tk)
 ---------------------------------
   * clamscan: --move: preserve original access and modification times
